fix: display image spaces in block to prevent jumpy loading

--- a/app/spa/src/style.scss
+++ b/app/spa/src/style.scss
@@ -398,6 +398,8 @@ a {
     float: left;
     border-radius: $margin;
     display: block;
+    width: 125px;
+    height: 125px;
   }
 }
 
@@ -408,7 +410,6 @@ a {
 	}
 
 	.justified-row img {
-		width: auto;
 		max-height: 100%;
 		margin-right: $margin;
     border-radius: $margin;
